Atualização v2.0: Login AD, Logs e Nova UI

--- a/index.html
+++ b/index.html
@@ -15,49 +15,57 @@
 
     <div id="login-screen">
         <div class="login-card">
-        <h2><span style="color: #0026ff;">YuYu</span>-Chat Operacional</h2>
+            <h2>
+                <span style="color: #0026ff;">YuYu</span>-Chat Corporativo
+            </h2>
+
+            <p id="error-msg" style="color: red; display: none; font-size: 0.9rem; border: 1px solid #ffcccc; background: #ffe6e6; padding: 10px; border-radius: 4px; margin-bottom: 15px;"></p>
+
+            <div class="form-group">
+                <label>Usuário de Rede (Login)</label>
+                <input
+                    type="text"
+                    id="usuario-ad"
+                    placeholder="Ex: j.silva"
+                    required
+                    autofocus
+                >
+            </div>
+
+            <div class="form-group">
+                <label>Senha</label>
+                <input
+                    type="password"
+                    id="senha-ad"
+                    placeholder="Sua senha de rede"
+                    required
+                    onkeypress="handleLoginEnter(event)"
+                >
+            </div>
+
+            <button
+                class="btn-login"
+                id="btn-entrar"
+                onclick="fazerLoginAPI()"
+            >
+                Entrar
+            </button>
             
-            <div class="form-group">
-                <label>Nome Completo</label>
-                <input type="text" id="nome" placeholder="Ex: João Silva" required>
             </div>
-            
-            <div class="form-group">
-                <label>Função</label>
-                <select id="perfil" onchange="toggleSenha()">
-                    <option value="operador" selected>Operador</option>
-                    <option value="supervisor">Supervisor</option>
-                </select>
-            </div>
-
-            <div class="form-group" id="div-senha" style="display: none;">
-                <label>Senha de Supervisor</label>
-                <input type="password" id="senha-input" placeholder="Digite a senha">
-            </div>
-
-            <div class="form-group">
-                <label>Selecione sua Equipe</label>
-                <select id="equipe">
-                    <option value="" disabled selected>-- Selecione --</option>
-                    <option value="Comercial">Equipe Comercial</option>
-                    <option value="Suporte">Equipe Suporte</option>
-                    <option value="Técnica">Equipe Técnica</option>
-                    <option value="Cobrança">Equipe Cobrança</option>
-                    <option value="SAC">Equipe SAC</option>
-                </select>
-            </div>
-
-            <button class="btn-login" onclick="conectar()">Entrar no Sistema</button>
-        </div>
     </div>
 
-    <div id="app-screen">
+    <div id="app-screen" style="display: none;">
         <header>
             <div class="header-info">
                 <h2 id="welcome-msg">Bem-vindo</h2>
                 <small id="welcome-team"></small>
             </div>
-            <button onclick="logout()" style="background:transparent; color:var(--text); border:1px solid var(--text); cursor:pointer;">Sair</button>
+            <button
+                onclick="logout()"
+                style="background: transparent; color: var(--text); border: 1px solid var(--text); cursor: pointer;"
+            >
+                Sair
+            </button>
         </header>
 
         <div class="container-lista">
